--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -6,7 +6,8 @@
 .hero-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: left;
+  align-items: center;
+  justify-content: center;
   max-width: 1200px;
   margin: 0 auto;
   gap: 40px;
@@ -67,7 +68,7 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: right;
+  align-items: center;
   margin: 0 auto;
   box-shadow: 0px 6px 25px rgba(108, 99, 255, 0.2);
   border: 3px solid #6c63ff;
